--- a/src/components/navigation/MobileTopBar.astro
+++ b/src/components/navigation/MobileTopBar.astro
@@ -10,7 +10,7 @@ import Button from "@/components/fundations/components/Button.astro";
     <Logo />
     <Button
       size="sm"
-      variant="muted"
+      variant="none"
       type="button"
       class="ml-auto w-9 inline-flex items-center justify-center group"
       @click="open = true"
