--- a/src/components/navigation/MobileNav.astro
+++ b/src/components/navigation/MobileNav.astro
@@ -53,10 +53,10 @@ import Button from "../fundations/components/Button.astro";
       style="display: none"
     >
       <Button
-        size="xs"
-        variant="default"
+        size="sm"
+        variant="none"
         type="button"
-        class="flex items-center justify-center w-8 ml-1"
+        class="flex items-center justify-center w-9 ml-1"
         @click="open = false"
       >
         <span class="sr-only">Close sidebar</span>
