--- a/src/components/fundations/containers/Wrapper.astro
+++ b/src/components/fundations/containers/Wrapper.astro
@@ -6,10 +6,11 @@ interface Props {
 const { variant = "standard", class: extraClass = "" } = Astro.props;
 // Map each variant to its specific classes
 const variantClasses = {
-  wide: "mx-auto px-8 max-w-7xl  lg:px-24 2xl:px-40",
-  narrow: "mx-auto px-8 max-w-xl 2xl:max-w-3xl  2xl:px-40 lg:px-24",
-  hero: "mx-auto px-8 max-w-7xl lg:px-24  py-8 2xl:px-40 ",
-  heroNarrow: "mx-auto px-8 max-w-xl 2xl:max-w-3xl lg:px-24 2xl:px-40 py-8",
+  wide: "mx-auto px-8 max-w-7xl  lg:px-24 2xl:pl-9 2xl:pr-56",
+  narrow: "mx-auto px-8 max-w-xl 2xl:max-w-3xl  2xl:pl-9 2xl:pr-56 lg:px-24",
+  hero: "mx-auto px-8 max-w-7xl lg:px-24  py-8 2xl:pl-9 2xl:pr-56 ",
+  heroNarrow:
+    "mx-auto px-8 max-w-xl 2xl:max-w-3xl lg:px-24 2xl:pl-9 2xl:pr-56 py-8",
 };
 // Combine the classes for the specified variant with any extra classes
 const classes = `${variantClasses[variant]} ${extraClass}`.trim();
