--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,7 +7,7 @@
 @theme {
   /* Typography */
   --font-family-mono: "Geist Mono", sans-serif;
-  --font-family-sans: "Geist", sans-serif;
+  --font-family-sans: "Epilogue", sans-serif;
 
   /* Color palette*/
   --color-*: initial;
