--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -110,11 +110,6 @@ import { AstroSeo } from "@astrolib/seo";
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link
-  href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Geist:wght@100..900&display=swap"
-  rel="stylesheet"
-/>
-
-<link
-  href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Geist:wght@100..900&family=Sora:wght@100..800&display=swap"
+  href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&display=swap"
   rel="stylesheet"
 />
