--- a/src/components/blog/EntriesOne.astro
+++ b/src/components/blog/EntriesOne.astro
@@ -8,7 +8,7 @@ const { title, url, avatar, tags, pubDate } = Astro.props;
   href={url}
   title={title}
   variant="link"
-  class="grid grid-cols-4 gap-4 md:grid-cols-8 py-4 items-center border-b border-dotted border-base-200 duration-300 group-hover:opacity-30 hover:opacity-100 peer hover:peer-hover:opacity-30"
+  class="grid grid-cols-4 gap-4 md:grid-cols-8 py-4 items-center border-b border-base-200 duration-300 group-hover:opacity-30 hover:opacity-100 peer hover:peer-hover:opacity-30"
 >
   <div class="col-span-full md:col-span-5">
     <Text
