--- a/src/components/navigation/DesktopNav.astro
+++ b/src/components/navigation/DesktopNav.astro
@@ -1,20 +1,18 @@
 ---
 import NavigationLinks from "@/components/navigation/NavigationLinks.astro";
-import SidebarButton from "@/components/navigation/SidebarButton.astro";
 import Logo from "@/components/global/Logo.astro";
 ---
 
 <div
-  class="z-50 hidden lg:flex md:w-64 2xl:w-72 md:flex-col md:fixed md:inset-y-1 p-2"
+  class="z-50 hidden lg:flex md:flex-col lg:h-svh sticky border-b border-zinc-800 top-0 md:inset-y-1 w-full"
   @click="open = !open"
 >
-  <div class="flex flex-col flex-1 relative min-h-0">
-    <div class="flex flex-col flex-1 pt-6 overflow-y-auto">
+  <div class="flex flex-col flex-1 relative min-h-0 w-full">
+    <div class="flex flex-col flex-1 pt-6 overflow-y-auto w-full">
       <div class="flex items-center flex-shrink-0 pl-6 text-black">
-        <Logo />
+        <div class="h-8"><Logo /></div>
       </div>
-      <nav class="flex-1 mt-4"><NavigationLinks /></nav>
+      <nav class="flex-1 w-full mt-4"><NavigationLinks /></nav>
     </div>
-    <SidebarButton />
   </div>
 </div>
