--- a/src/components/navigation/MobileNav.astro
+++ b/src/components/navigation/MobileNav.astro
@@ -1,7 +1,7 @@
 ---
 import Logo from "@/components/global/Logo.astro";
 import MobileTopBar from "@/components/navigation/MobileTopBar.astro";
-import SidebarButton from "@/components/navigation/SidebarButton.astro";
+import AuthButtons from "@/components/navigation/AuthButtons.astro";
 import NavigationLinks from "@/components/navigation/NavigationLinks.astro";
 import Button from "../fundations/components/Button.astro";
 ---
@@ -30,14 +30,14 @@ import Button from "../fundations/components/Button.astro";
   >
   </div>
   <div
-  x-show="open"
-  x-transition:enter="transition ease-in-out duration-300 transform"
-  x-transition:enter-start="translate-y-full"
-  x-transition:enter-end="translate-y-0"
-  x-transition:leave="transition ease-in-out duration-300 transform"
-  x-transition:leave-start="translate-y-0"
-  x-transition:leave-end="translate-y-full"
-  class="relative flex flex-col flex-1 w-full  bg-white"
+    x-show="open"
+    x-transition:enter="transition ease-in-out duration-300 transform"
+    x-transition:enter-start="translate-y-full"
+    x-transition:enter-end="translate-y-0"
+    x-transition:leave="transition ease-in-out duration-300 transform"
+    x-transition:leave-start="translate-y-0"
+    x-transition:leave-end="translate-y-full"
+    class="relative flex flex-col flex-1 w-full bg-white"
     style="display: none"
   >
     <div
@@ -78,12 +78,15 @@ import Button from "../fundations/components/Button.astro";
       </Button>
     </div>
     <div class="flex-1 h-0 pt-5 overflow-y-auto">
-      <div class="flex items-center flex-shrink-0 pl-10 pt-0">
+      <div class="flex items-center flex-shrink-0 pl-8 pt-0">
         <Logo />
       </div>
-      <nav class="px-2 mt-5 space-y-1"><NavigationLinks /></nav>
+      <nav class="mt-5 space-y-1 pl-2"><NavigationLinks /></nav>
     </div>
-    <SidebarButton />
+
+    <div class="pl-8 pb-4 items-center flex w-full flex-row gap-2">
+      <AuthButtons />
+    </div>
   </div>
   <div class="flex-shrink-0 w-14">
     <!-- Force sidebar to shrink to fit close icon -->
