--- a/src/components/tools/BigCard.astro
+++ b/src/components/tools/BigCard.astro
@@ -13,7 +13,6 @@ const { title, url, thumbnail, live } = {
   thumbnail: Astro.props.post.data.thumbnail.url,
 };
 ---
-
 <div
   class="group-hover:opacity-30 hover:opacity-100 peer hover:peer-hover:opacity-30 duration-300 group"
 >
@@ -54,11 +53,42 @@ const { title, url, thumbnail, live } = {
             ></path></svg
           >
         </a>
-        
-        <BookmarksModal />
-
+        <div x-data="{ open: false }">
+          <button class="flex items-center" x-on:click="open = true">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="icon icon-tabler icons-tabler-outline icon-tabler-bookmark-plus size-4"
+              ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
+                d="M12 17l-6 4v-14a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v5"
+              ></path><path d="M16 19h6"></path><path d="M19 16v6"></path></svg
+            >
+          </button>
+          <BookmarksModal />
+        </div>
         <button class="flex items-center">
-          <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-heart-plus size-4"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 20l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.96 6.053" /><path d="M16 19h6" /><path d="M19 16v6" /></svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="icon icon-tabler icons-tabler-outline icon-tabler-heart-plus size-4"
+            ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
+              d="M12 20l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.96 6.053"
+            ></path><path d="M16 19h6"></path><path d="M19 16v6"></path></svg
+          >
         </button>
       </div>
     </div>
