--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -100,12 +100,6 @@ import { AstroSeo } from "@astrolib/seo";
 <!--- Alpine JS CDN -->
 <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
-<!-- 
-//
-//
-// Inter
-// https://rsms.me/inter/
-
--->
+<!-- Inter https://rsms.me/inter/ -->
 <link rel="preconnect" href="https://rsms.me/" />
 <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
