--- a/src/components/system/Typography.astro
+++ b/src/components/system/Typography.astro
@@ -16,7 +16,7 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
       variant="textBase"
       class="mt-4 text-base-500 text-balance 2xl:text-xl"
     >
-      All variants
+      Inter
     </Text>
   </Wrapper>
 </section>
