--- a/src/pages/blog/home.astro
+++ b/src/pages/blog/home.astro
@@ -43,7 +43,9 @@ const sortedTags = allTags.sort((a, b) => a.localeCompare(b));
   </section>
   <section>
     <Wrapper variant="standard" class="py-12">
-      <div class="flex flex-wrap gap-2">
+      <div
+        class="scrollable-content relative flex snap-x snap-proximity gap-2 py-2 px-2 overflow-x-scroll scrollbar-hide"
+      >
         {
           sortedTags.map((tag) => (
             <>
