--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -14,9 +14,9 @@ import BigLogo from "@/components/assets/BigLogo.astro";
     <Text
       tag="p"
       variant="textLG"
-      class="mt-4 text-base-700 text-balance max-w-xs"
+      class="mt-4 text-base-700 text-balance"
     >
-      Your Web app spot to find new tools every day
+      Your last spot to find new tools every day
     </Text>
     <div class="mt-8 flex flex-wrap gap-4">
       <div x-data="{ open: false }">
